fix z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,7 +48,7 @@ $xx-large: 1400px;
         position: sticky;
         top: 0;
         background: #1a1a1a;
-        z-index: 1;
+        z-index: 2;
     }
 
 
